--- a/starter/assets/scss/abstracts/_variables.scss
+++ b/starter/assets/scss/abstracts/_variables.scss
@@ -18,7 +18,7 @@ $font-weights: (
 
 $custom-colors: (
     primary: (
-        base: dodgerblue
+        base: #0071df
     ),
     secondary: (
         base: coral
